Reimplementing the reader because it's just a mess.
I need to look up resolution rules in julia, because it doesn't appear to be
either a normal single pass or multi-pass complier but some blend.

--- a/experiments/host-evaluation/readme.org
+++ b/experiments/host-evaluation/readme.org
@@ -75,6 +75,10 @@ working in clojure.
    just numerics — which is so rare for a programming language.
 ** Zig
 ** Nim
+* unicode
+  Unicode is important. Not what I really want to focus on, but I need it.
+  π ∀
+
 * Test V1
   What's the simplest program that tests all the moving parts?
 
