--- a/experiments/host-evaluation/readme.org
+++ b/experiments/host-evaluation/readme.org
@@ -75,6 +75,9 @@ working in clojure.
    just numerics — which is so rare for a programming language.
 ** Zig
 ** Nim
+** Chapel
+   Chapel is designed ground up for distributed programming which is one
+   of the things I need. I don't know much about it, but it deserves a hearing.
 * unicode
   Unicode is important. Not what I really want to focus on, but I need it.
   π ∀
