We have a data representation for networks.
Suitable for extending and combining networks arbitrarily. Remains to be seen
how suitable it is for executing networks.

--- a/readme.org
+++ b/readme.org
@@ -1,2 +1,6 @@
 This repo is a bucket for experiments and prototypes,which may not on the
 surface appear to be related at all. I think they are, but that might change.
+
+* Potentially Useful Reading
+  Emphasis on potential
+** https://arxiv.org/abs/2206.01041
